# labs_robotica_20191

lab2/: CMakeLists.txt  package.xml
lab2/config/: ur5.rviz
lab2/launch/: display_ur5_sliders.launch
lab2/src/: lab2functions.py  test_fkine  test_fkine-original  test_ikine-original.py  test_ikine.py  test_joystick
lab3/: CMakeLists.txt  package.xml
lab3/launch/: display_ur5.launch
lab3/src/: lab3functions.py  test_diffkine  test_diffkine_pose  test_fkine
lab4/: CMakeLists.txt  package.xml
lab4/config/: robot_control.yaml
lab4/launch/: robot.launch  robot_gazebo.launch  robot_gazebo_control.launch  robotx.launch
lab4/urdf/: robot_gazebo.urdf
lab5/: CMakeLists.txt  package.xml
lab6/: CMakeLists.txt  package.xml
lab6/src/: control.py
lab6/src/bridge/: rosimg2cv.py
lab6/src/percepcion/: 1-mostrar-imagen.py  2-mostrar-camara.py  3-threshold.py  4-morfologia.py  5-color.py  6-matching.py  7-deteccion.py
lab6/src/percepcion/otros/: 1-histograma.py  2-transformaciones.py  3-filtros-suavizado.py  4-bordes.py  5-hough.py  6-corners.py  7-descriptores.py  8-template-matching.py  9-rostros.py
lab7/: CMakeLists.txt  package.xml
lab7/launch/: display_ur5.launch
lab7/src/: control_pdg  functions.py  modelo_din.py
lab7/urdf/: ur5_robot.urdf
