<?xml version="1.0"?>
<package format="2">
  <name>lab2</name>
  <version>0.0.0</version>
  <description>Lab 2</description>

  <maintainer email="oramos@todo.todo">oramos</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


</package>
